adding test to the student editforms

--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -26,13 +26,13 @@
     <br>
     
     <div>
-      <label for="MajorOne">Major 1</label>
+      <label for="majorOne">Major 1</label>
       <%- majorOne %>
     </div>
     <br>
     
     <div>
-      <label for="MajorTwo">Major 2</label>
+      <label for="majorTwo">Major 2</label>
       <%- majorTwo %>
     </div>
     <br>
