--- a/views/pages/misc/staffmenu.html
+++ b/views/pages/misc/staffmenu.html
@@ -1,8 +1,19 @@
 <p>Placeholder for staff menu.</p>
   
-<ul>
-    <li><a href="/browser">Register browser</a></li>
-    <li><a href="/visit">View visit data</a></li>
-    <li><a href="/visit?=spreadsheet">Download visit spreadsheet</a></li>
-    <li><a href="/logout">Log out</a></li>
-</ul>
+
+    <div class"landingPage1">
+        <a href="/browser">Register browser</a>
+    </div>
+    
+    <div class"landingPage2">
+        <a href="/visit">View visit data</a>
+    </div>
+    
+    <div class"landingPage3">
+        <a href="/visit?=spreadsheet">Download visit spreadsheet</a>
+    </div>
+    
+    
+    <div class"landingPage4">
+        <a href="/logout">Log out</a>
+    </div>
