--- a/views/pages/staff/LandingPage.html
+++ b/views/pages/staff/LandingPage.html
@@ -1,6 +1,21 @@
   <h1>Naylor Learning Center - Welcome</h1>
+  
+  <div class"landingPage1">
     <p><a href="/visit/browser">Register this browser for attendance tracking</a></p>
+  </div>
+  
+  <div class"landingPage2">
     <p><a href="/visit">View attendance data</a></p>
+  </div>
+  
+  <div class"landingPage1">
     <p><a href="/visit/spreadsheet">Dump data for spreadsheet</a></p>
+  </div>
+  
+  <div class"landingPage1">
     <p><a href="/staff/<%= userId %>/edit">Update your profile</a></p>
+  </div>
+  
+  <div class"landingPage1">
     <p><a href="/logout">Log out</a></p>
+  </div>
