--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,8 +1,99 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
 a {
   color: #00B7FF;
+}
+
+body {
+  padding: 50px;
+  font: 14px "Times New Roman", sans-serif;
+}
+
+h1{
+  font-family: "Georgia";
+}
+
+/*p2 {
+  margin: 0 10px 0 10px;
+  background-color:#87CEFA;
+  border-left-width: 10px;
+  border-left-color: #1E90FF;
+}*/
+
+
+form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 500px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+form input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin: 0 0 15px;
+  padding: 15px;
+  font-size: 14px;
+}
+
+form select {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin: 0 0 15px;
+  padding: 15px;
+  font-size: 14px;
+}
+
+button {
+  background-color: white;
+  border-radius: 8px;
+  border: 2px solid #f44336;
+  width: 80%;
+  color: black;
+  padding: 15px 32px;
+  position: center;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #f44336;
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+p {
+  margin: 10px;
+}
+
+
+div.instructions {
+  background:#CBF6FF;
+  text-align: justify;
+  border: 5px solid #87CEFA;
+  border-radius: 5px;
+}
+
+div.landingPage1 {
+  background:#CBF6FF;
+  text-align: justify;
+  border: 5px solid #87CEFA;
+  border-radius: 5px;
 }
