--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -1,15 +1,19 @@
 <form method="POST" action="/login">
-    <p>
-         <label>Username
-            <input name="username" autofocus type="text">
-         </label>
-    </p>
-    <p>
-         <label>Password
-              <input name="password" type="password">
-        </label>
-     </p>
-     <p>
-         <input value="Ok" type="submit"> 
-    </p>
+    
+    <h1>Davis & Elkins College</h1>
+    <h3>Naylor Learning Center</h3>
+    <br>
+    <br>
+    
+    <input name="username" class="login" placeholder="Username" autofocus type="text"/>
+    <br>
+    
+    <input name="password" class="login" placeholder="Password" autofocus type="password"/>
+    <br>
+    <br>
+    <br>
+    
+    <button id="submitButton" type="submit">Login</button>
+    
+    
  </form>
