ran tests :tomato:

--- a/views/pages/visit/appendView.html
+++ b/views/pages/visit/appendView.html
@@ -18,7 +18,7 @@
 </form>
 
 <a id="link" download="student.csv">
-    <button onClick="download()">Download this view</button>
+    <button onclick="download()">Download this view</button>
 </a>
 
 <script>
