--- a/views/pages/visit/view.html
+++ b/views/pages/visit/view.html
@@ -1,18 +1,100 @@
-<!-- allow enter key to submit data -->
-<script>
-    var query = document.getElementById("query");
-    query.addEventListener("keyup", function(event) {
-        if (event.keyCode === 13) {
-
-        document.getElementById("submit").click();
-        }
-        });
-</script>
-<!-- data text box -->
+<!-- include text box for data -->
 <form method="POST" action="<%= action %>">
-<body>
-    <label for="query" value="Input">Search for student</label>
-    <input id="query" type="text">
-    <input id="submit" type="submit" value="Submit">
-</body>
+    <body>
+        <label for="query" value="Input">Search for student</label>
+        <input id="query" name="query" type="text">
+        <button id="submit" type="submit">Submit</button>
+    </body>
 </form>
+
+<a id="link" download="student.csv">
+    <button onclick="download()">Download this view</button>
+</a>
+
+<script>
+    function download() {
+        var table = document.getElementById("visitTable");
+        var data = ""; //requires some initiation or has an annoying "undefined" in the first cell
+        
+        //convert object to array
+        //code shell courtesy of https://stackoverflow.com/questions/3072233/getting-value-from-table-cell-in-javascript-not-jquery
+        for (var rowIndex = 0, rowLength = table.rows.length; rowIndex < rowLength; rowIndex++) {
+            for (var cellIndex = 0, cellLength = table.rows[rowIndex].cells.length; cellIndex < cellLength; cellIndex++) {
+                data += table.rows[rowIndex].cells.item(cellIndex).innerHTML.trim() + ", "; //append contents of cell and add comma for new cell
+            }
+            //new row
+            data += "\n";
+        }
+        
+        //convert into file and URL and pass URL to download button for execution
+        var file = new Blob([data], {type: "text/csv"});
+        var url = URL.createObjectURL(file);
+        var link = document.getElementById("link");
+        link.setAttribute("href", url);
+}
+</script>
+
+<!-- Populate table -->
+<body>
+    <table id="visitTable">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Check In</th>
+                <th>Check Out</th>
+                <th>Visit Length</th>
+                <th>Check Out estimated?</th>
+                <th>Purpose of Visit</th>
+                <th>Purpose Achieved?</th>
+                <th>Comments</th>
+                <th>SLP Instructor</th>
+                <th>Tutoring</th>
+            </tr>
+        </thead>
+
+    <% if(Query) {Query.forEach(function(visit) { %>
+        <tbody>
+            <tr>
+                <td>
+                    <%= visit.id %>
+                </td>
+                <td>
+                    <%= visit.firstName %>
+                </td>
+                <td>
+                    <%= visit.lastName %>
+                </td>
+                <td>
+                    <%= visit.checkIn %>
+                </td>
+                <td>
+                    <%= visit.checkOut %>
+                </td>
+                <td>
+                    <%= visit.visitLength %>
+                </td>
+                <td>
+                    <%= visit.checkOutEstimated %>
+                </td>
+                <td>
+                    <%= visit.purposeOfVisit %>
+                </td>
+                <td>
+                    <%= visit.purposeAchieved %>
+                </td>
+                <td>
+                    <%= visit.comments %>
+                </td>
+                <td>
+                    <%=visit.slpInstructor %>
+                </td>
+                <td>
+                    <%= visit.tutoring %>
+                </td>
+            </tr>
+        </tbody>
+    <% }); }%>
+    </table>
+</body>
