--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -91,9 +91,23 @@ div.instructions {
   border-radius: 5px;
 }
 
-div.landingPage1 {
-  background:#CBF6FF;
+/*div.landingPage1 {
+  background-color: white;
   text-align: justify;
-  border: 5px solid #87CEFA;
+  border: 5px solid #f44336;
   border-radius: 5px;
+  max-width: 100px;
+  max-height: 100px;
+  transition-duration: 0.4s;
 }
+
+div.landingPage1:link, div.landingPage1:visited {
+  color:black;
+}
+
+div.landingPage1:hover {
+  color: white;
+  background-color: #f44336;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  text-color: white;
+}*/
