--- a/views/pages/misc/staffmenu.html
+++ b/views/pages/misc/staffmenu.html
@@ -1,19 +1,21 @@
 <p>Placeholder for staff menu.</p>
   
 
-    <div class"landingPage1">
+    <div class="landingPage1">
         <a href="/browser">Register browser</a>
     </div>
+    <br>
     
-    <div class"landingPage2">
+    <div class="landingPage2">
         <a href="/visit">View visit data</a>
     </div>
+    <br>
     
-    <div class"landingPage3">
+    <div class="landingPage3">
         <a href="/visit?=spreadsheet">Download visit spreadsheet</a>
     </div>
+    <br>
     
-    
-    <div class"landingPage4">
+    <div class="landingPage4">
         <a href="/logout">Log out</a>
     </div>
