--- a/views/pages/misc/staffmenu.html
+++ b/views/pages/misc/staffmenu.html
@@ -1,21 +1,11 @@
+<div class="header">
+    <a href="/browser">Register browser</a>
+    <a href="/visit">View visit data</a>
+    <a href="/visit?=spreadsheet">Download visit spreadsheet</a>
+    <a href="/logout">Log out</a>
+</div>
+    
 <p>Placeholder for staff menu.</p>
-  
+        
 
-    <div class="landingPage1">
-        <a href="/browser">Register browser</a>
-    </div>
-    <br>
-    
-    <div class="landingPage2">
-        <a href="/visit">View visit data</a>
-    </div>
-    <br>
-    
-    <div class="landingPage3">
-        <a href="/visit?=spreadsheet">Download visit spreadsheet</a>
-    </div>
-    <br>
-    
-    <div class="landingPage4">
-        <a href="/logout">Log out</a>
-    </div>
+   
