Fix visit creation, modifying visit model

--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -5,7 +5,7 @@
     
     <div>
         <p id="visitPurposeQuestion">What is your goal/purpose for this visit?</p>
-        <textarea id="visitPurpose" name="visitPurpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required value="<%= formData.visitPurpose %>"></textarea>
+        <textarea id="purpose" name="purpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required value="<%= formData.visitPurpose %>"></textarea>
     </div>
     <br>
     <br>
