--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -9,7 +9,7 @@
   
     <% if (formData.isLengthEstimated) { %>
         <p>Please estimate the duration of your visit to the nearest quarter hour:&nbsp; 
-            <select id="visitLength" name="visitLength" required>
+            <select id="length" name="length" required>
                 <% for (var i = 1; i <= 32; i++) { %>
                     <option value="<%=i * 0.25%>"><%=i * 0.25%></option>
                 <% } %>
