--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -105,3 +105,14 @@ div.header a:hover {
   background: white;
   color: black;
 }
+
+div.menu {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 600px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
