--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -25,6 +25,68 @@
         var link = document.getElementById("link");
         link.setAttribute("href", url);
 }
+function sortTable(n) {
+  var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+  table = document.getElementById("visitTable");
+  switching = true;
+  // Set the sorting direction to ascending:
+  dir = "asc";
+  /* Make a loop that will continue until
+  no switching has been done: */
+  while (switching) {
+    // Start by saying: no switching is done:
+    switching = false;
+    rows = table.rows;
+    /* Loop through all table rows (except the
+    first, which contains table headers): */
+    for (i = 1; i < (rows.length - 1); i++) {
+      // Start by saying there should be no switching:
+      shouldSwitch = false;
+      /* Get the two elements you want to compare,
+      one from current row and one from the next: */
+      x = rows[i].getElementsByTagName("TD")[n];
+      y = rows[i + 1].getElementsByTagName("TD")[n];
+      /* Check if the two rows should switch place,
+      based on the direction, asc or desc: */
+      if (dir == "asc") {
+        if (Number(x.innerHTML) > Number(y.innerHTML)) {
+            shouldSwitch = true;
+            break;
+        }
+        // if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {                 //this code sorts text
+        //   // If so, mark as a switch and break the loop:
+        //   shouldSwitch = true;
+        //   break;
+        // }
+      } else if (dir == "desc") {
+        if (Number(x.innerHTML) > Number(y.innerHTML)) {
+            shouldSwitch = true;
+            break;
+        }
+        // if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+        //   // If so, mark as a switch and break the loop:
+        //   shouldSwitch = true;
+        //   break;
+        // }
+      }
+    }
+    if (shouldSwitch) {
+      /* If a switch has been marked, make the switch
+      and mark that a switch has been done: */
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+      // Each time a switch is done, increase this count by 1:
+      switchcount ++;
+    } else {
+      /* If no switching has been done AND the direction is "asc",
+      set the direction to "desc" and run the while loop again. */
+      if (switchcount == 0 && dir == "asc") {
+        dir = "desc";
+        switching = true;
+      }
+    }
+  }
+}
 </script>
 
 <!-- Populate table -->
@@ -32,7 +94,7 @@
     <table id="visitTable">
         <thead>
             <tr>
-                <th>Student ID</th>
+                <th onclick="sortTable(0)">Student ID</th>
                 <th>Check In</th>
                 <th>Check Out</th>
                 <th>Visit Length</th>
