CSS work and HTML reformatting.

--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -1,19 +1,25 @@
 <form method="POST" action="/login">
     
     <h1>Davis & Elkins College</h1>
-    <h3>Naylor Learning Center</h3>
-    <br>
-    <br>
+    <h3>Naylor Learning Center</h2>
+
+    <div class = "formPiece">
+        <input name="username" class="login" placeholder="Username" autofocus type="text"/>
+    </div>
+
+    <div class = "formPiece">
+        <input name="password" class="login" placeholder="Password" autofocus type="password"/>
+    </div>
+
+    <div class = "formPiece">
+        <button id="submitButton" type="submit">Login</button>
+    </div>
     
-    <input name="username" class="login" placeholder="Username" autofocus type="text"/>
-    <br>
     
-    <input name="password" class="login" placeholder="Password" autofocus type="password"/>
-    <br>
-    <br>
-    <br>
+
     
-    <button id="submitButton" type="submit">Login</button>
+    
+    
     
     
  </form>
