--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -41,8 +41,10 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/banner.css">
     <link rel="stylesheet" href="/styles/fa.css">
+    <link rel="stylesheet" href="/styles/form.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/table.css">
     <!--STYLES END-->
 
 
