--- a/views/pages/staff/editForm.html
+++ b/views/pages/staff/editForm.html
@@ -1,27 +1,33 @@
 <form method="POST" action="<%= action %>">
+  
   <div>
+    <h2>User Profile</h2>
+  </div>
+  
+  <div class = "formPiece">
     <label for="username">Username</label>
     <input autofocus id="username" name="username" type="email" value="<%= formData.username %>">
   </div>
 
-  <div>
+  <div class = "formPiece">
     <label for="firstName">First name</label>
     <input id="firstName" name="firstName" type="text" value="<%= formData.firstName %>">
   </div>
 
-  <div>
+  <div class = "formPiece">
     <label for="lastName">Last name</label>
     <input id="lastName" name="lastName" type="text" value="<%= formData.lastName %>">
   </div>
 
-  <div>
+  <div class = "formPiece">
     Are you an SLP Instructor? :
-<select>
-  <option id="myOption" value="Yes">Yes</option>
-  <option value="No">No</option>
-</select>
-
+    <select>
+      <option id="myOption" value="Yes">Yes</option>
+      <option value="No">No</option>
+    </select>
   </div>
 
-  <button id="submitButton" type="submit">Update</button>
+  <div class = "formPiece">
+    <button id="submitButton" type="submit">Update</button>
+  </div>
 </form>
