--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -1,67 +1,62 @@
 
 
 <form method="POST" action="<%= action %>" >
-    <div>
-      <label for="firstName" value="First Name">First name</label> <br>
+  <div>
+    <h2>User Profile</h2>
+  </div>
+    <div class = "formPiece">
+      <label for="firstName" value="First Name">First name</label>
       <input id="firstName" name="firstName" type="text"  placeholder="First Name" autofocus maxlength="255" required value="<%= formData.firstName %>" > 
     </div>
-    <br>
-    
-    <div>
-      <label for="lastName" value="Last Name">Last name</label> <br>
+  
+    <div class = "formPiece">
+      <label for="lastName" value="Last Name">Last name</label>
       <input id="lastName" name="lastName" type="text" required value="<%= formData.lastName %>">
     </div>
-    <br>
     
-    <div>
-      <label for="academicRank">Academic Rank</label> <br>
+    <div class = "formPiece">
+      <label for="academicRank">Academic Rank</label>
       <%- academicRank %>
     </div>
-    <br>
     
-    <div>
-      <label for="residentialStatus">Residential Status</label> <br>
+    <div class = "formPiece">
+      <label for="residentialStatus">Residential Status</label>
       <%- residentialStatus %>
     </div>
-    <br>
     
-    <div>
-      <label for="majorOne">Major 1</label> <br>
+    <div class = "formPiece">
+      <label for="majorOne">Major 1</label>
       <%- majorOne %>
     </div>
-    <br>
     
-    <div>
-      <label for="majorTwo">Major 2</label> <br>
+    <div class = "formPiece">
+      <label for="majorTwo">Major 2</label>
       <%- majorTwo %>
     </div>
-    <br>
     
-    <div>
-    Are you an athlete?
-    <br>
-    <br>
-    <label for="athletey">Yes</label>
-    <input id="yesAthlete" type="radio" name="YNAthlete"/>
-    <label for="athleteno">No</label>
-    <input id="noAthlete" type="radio" name="YNAthlete"/>
-    <br>
-    <br>
+    <div class = "formPiece">
+      <p>Are you an athlete?</p>
+      <label class = "radio-inline">
+          Yes<input type="radio" name="YNAthlete"/>
+      </label>
+      <label class = "radio-inline">
+          No<input type="radio" name="YNAthlete"/>
+      </label>
     </div>
     
-    <div>
-      <br>
-      <label for="fallSport" class="sports">Fall sport</label> <br>
+    <div class = "formPiece">
+      <label for="fallSport" class="sports">Fall sport</label>
       <%- fallSport %>
     </div>
 
-    <div>
-      <br>
-      <label for="springSport" id="springSports" class="sports">Spring sport</label> <br>
+    <div class = "formPiece">
+      <label for="springSport" id="springSports" class="sports">Spring sport</label>
       <%- springSport %>
     </div>
-    <br>
+
+    <div class = "formPiece">
+      <button id="submitButton" type="submit">Update</button>
+    </div>
     
-    <button id="submitButton" type="submit">Update</button>
 
 </form>
