--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -4,54 +4,51 @@
 
 <form method="POST" action="<%= action %>">
 
-    <p>You checked in at </p>&nbsp; <%= formData.checkInTime %> <br>
+    <div>
+        <h2>Check Out</h2>
+    </div>
 
-  
+    <div class = "formPiece">
+        <p>You checked in at </p>&nbsp; <%= formData.checkInTime %>
+    </div>
+    
     <% if (formData.isLengthEstimated) { %>
-        <p>Please estimate the duration of your visit to the nearest quarter hour:&nbsp; 
-            <select id="length" name="length" required>
-                <% for (var i = 1; i <= 32; i++) { %>
-                    <option value="<%=i * 0.25%>"><%=i * 0.25%></option>
-                <% } %>
-            </select>&nbsp; hour(s).
-        </p>
+        <div class = "formPiece">
+            <p>Please estimate the duration of your visit to the nearest quarter hour:&nbsp; 
+                <select id="length" name="length" required>
+                    <% for (var i = 1; i <= 32; i++) { %>
+                        <option value="<%=i * 0.25%>"><%=i * 0.25%></option>
+                    <% } %>
+                </select>&nbsp; hour(s).
+            </p>
+        </div>
     <% } %>
+
+    <div class = "formPiece">
+        <p>The purpose of your visit was: </p>&nbsp; <%= formData.visitPurpose%>
+    </div>
     
-    <br>
- 
-    <p>The purpose of your visit was: </p>&nbsp; <%= formData.visitPurpose%> <br>
- 
-
-    <div>
-
-      <label  for="purposeAchieved" id="purposeAchievedLavel">Did you accomplish the goal/purpose of your visit?</label>
+    <div class = "formPiece">
+      <label  for="purposeAchieved" id="purposeAchievedLabel">Did you accomplish the goal/purpose of your visit?</label>
     <%- purposeAchieved %>
-
     </div>
-    <br>
-    
-
-
-    <div>
+ 
+    <div class = "formPiece">
         <p>Did you used a Tutor?</p>
-        <input type="radio" value="Yes" name="usedTutor"> Yes <br>
-        <input type="radio" value="No" name="usedTutor"> No <br>
+        <label class = "radio-inline">Yes<input type="radio" value="Yes" name="usedTutor"></label>
+        <label class = "radio-inline">No<input type="radio" value="No" name="usedTutor"></label>
     </div>
-    <br>
 
-    <div>
+    <div class = "formPiece">
         <label for="tutorCourses" value="tutorCourses">If yes, list the Courses:</label>
         <input id="tutorCourses" name="tutorCourses" type="text" autofocus maxlength="255" required value="<%= formData.tutorCourses %>">
     </div>
-    <br>
-    
-    <div>
+
+    <div class = "formPiece">
         <p>Comments:</p>
         <textarea id="comment" name="comment" rows="4" cols="75" required value="<%= formData.comment %>"></textarea>
     </div>
-    <br>
 
-    <br>
     <button id="submitButton" type="submit">Submit</button>
 
 
