Few minor tweaks.

--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -25,7 +25,7 @@
     <% } %>
 
     <div class = "formPiece">
-        <p>The purpose of your visit was: </p>&nbsp; <%= formData.visitPurpose%>
+        <p>The purpose of your visit was: </p>&nbsp; <%= formData.purpose%>
     </div>
     
     <div class = "formPiece">
