--- a/views/pages/misc/staffmenu.html
+++ b/views/pages/misc/staffmenu.html
@@ -2,7 +2,8 @@
   <div class="menu">
     <h1>Naylor Learning Center - Welcome</h1>
     <p><button onclick="window.location.href = '/browser';">Register this browser for attendance tracking</button></p>
-    <p><button onclick="window.location.href = '/visit';">View attendance data</button></p>
+    <p><button onclick="window.location.href = '/student';">View Students</button></p>
+    <p><button onclick="window.location.href = '/visit';">View Visits</button></p>
     <p><button onclick="window.location.href = '/staff/<%= userId %>/edit';">Update your profile</button></p>
     <p><button onclick="window.location.href = '/logout';">Log out</button></p>
   </div>
