Enable most htmlhint rules and make views pass them

--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -1,7 +1,7 @@
 <form method="POST" action="/login">
     
-    <h1>Davis & Elkins College</h1>
-    <h3>Naylor Learning Center</h2>
+    <h1>Davis &amp; Elkins College</h1>
+    <h2>Naylor Learning Center</h2>
 
     <div class = "formPiece">
         <input name="username" class="login" placeholder="Username" autofocus type="text"/>
@@ -14,12 +14,5 @@
     <div class = "formPiece">
         <button id="submitButton" type="submit">Login</button>
     </div>
-    
-    
-
-    
-    
-    
-    
     
  </form>
