--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -1,18 +1,16 @@
 <% try { %>
 <script src="/javascripts/formCheck.js"></script>
 
+<h2>Check In</h2>
+
 <form method="POST" action="<%= action %>">
     
-    <div>
-        <h2>Check In</h2>
-    </div>
-        
-    <div class = "formPiece">
+    <div class="formPiece">
         <p id="visitPurposeQuestion">What is your goal/purpose for this visit?</p>
-        <textarea id="purpose" name="purpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required value="<%= formData.visitPurpose %>"></textarea>
+        <textarea id="purpose" name="purpose"  rows="10" cols="40" autofocus maxlength="255" required value="<%= formData.purpose %>"></textarea>
     </div>
     
-    <div class = "formPiece">
+    <div class="formPiece">
         <button id="submitButton" type="submit">Submit</button>
     </div>
 
