Adition to html select *needs fixed*.

--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -4,11 +4,11 @@
     <h2>Naylor Learning Center</h2>
 
     <div class = "formPiece">
-        <input name="username" class="login" placeholder="Username" autofocus type="text"/>
+        <input name="username" class="login" placeholder="Username" autofocus type="text" required/>
     </div>
 
     <div class = "formPiece">
-        <input name="password" class="login" placeholder="Password" autofocus type="password"/>
+        <input name="password" class="login" placeholder="Password" type="password" required/>
     </div>
 
     <div class = "formPiece">
