--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -5,27 +5,27 @@
     <h2>User Profile</h2>
   </div>
     <div class = "formPiece">
-      <label for="firstName" value="First Name">First name</label>
+      <label for="firstName" value="First Name">*First name</label>
       <input id="firstName" name="firstName" type="text"  placeholder="First Name" autofocus maxlength="255" required value="<%= formData.firstName %>" > 
     </div>
   
     <div class = "formPiece">
-      <label for="lastName" value="Last Name">Last name</label>
+      <label for="lastName" value="Last Name">*Last name</label>
       <input id="lastName" name="lastName" type="text" required value="<%= formData.lastName %>">
     </div>
     
     <div class = "formPiece">
-      <label for="academicRank">Academic Rank</label>
+      <label for="academicRank">*Academic Rank</label>
       <%- academicRank %>
     </div>
     
     <div class = "formPiece">
-      <label for="residentialStatus">Residential Status</label>
+      <label for="residentialStatus">*Residential Status</label>
       <%- residentialStatus %>
     </div>
     
     <div class = "formPiece">
-      <label for="majorOne">Major 1</label>
+      <label for="majorOne">*Major 1</label>
       <%- majorOne %>
     </div>
     
