Changed Name of Variable tutorCourses to courses.

--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -6,7 +6,7 @@
 <form method="POST" action="<%= action %>">
     
     <div class="formPiece">
-        <p id="visitPurposeQuestion">What is your goal/purpose for this visit?</p>
+        <label id="visitPurposeQuestion">What is your goal/purpose for this visit?</label>
         <textarea id="purpose" name="purpose"  rows="10" cols="40" autofocus maxlength="255" required value="<%= formData.purpose %>"></textarea>
     </div>
     
