--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -3,16 +3,16 @@
     <h1>Davis &amp; Elkins College</h1>
     <h2>Naylor Learning Center</h2>
 
-    <div class = "formPiece">
-        <input name="username" class="login" placeholder="Username" autofocus type="text"/>
+    <div>
+        <input class = "w3-input w3-border" name="username" class="login" placeholder="Username" autofocus type="text"/>
     </div>
 
-    <div class = "formPiece">
-        <input name="password" class="login" placeholder="Password" autofocus type="password"/>
+    <div>
+        <input class = "w3-input w3-border" name="password" class="login" placeholder="Password" autofocus type="password"/>
     </div>
 
-    <div class = "formPiece">
-        <button id="submitButton" type="submit">Login</button>
+    <div class = "button">
+        <button class="w3-btn w3-block w3-red" type="submit">Login</button>
     </div>
     
  </form>
