fixed login CSS styling

--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -3,12 +3,12 @@
     <h1>Davis &amp; Elkins College</h1>
     <h2>Naylor Learning Center</h2>
 
-    <div class = "formPiece">
-        <input name="username" class="login" placeholder="Username" autofocus type="text" required/>
+    <div>
+        <input name="username" class="w3-input w3-border" placeholder="Username" autofocus type="text" required/>
     </div>
 
-    <div class = "formPiece">
-        <input name="password" class="login" placeholder="Password" type="password" required/>
+    <div>
+        <input name="password" class="w3-input w3-border" placeholder="Password" type="password" required/>
     </div>
 
     <div class = "button">
