--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -43,7 +43,7 @@
 
     <div class = "formPiece">
         <label for="courses" value="courses">List the courses you worked on:</label>
-        <input id="courses" name="courses" type="text" autofocus maxlength="255" required value="<%= formData.courses %>">
+        <input id="courses" name="courses" type="text" autofocus maxlength="255" value="<%= formData.courses %>">
     </div>
 
     <div class = "formPiece">
