changed courses back to tutorCourses.

--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -63,7 +63,7 @@ function filterName(x) {
                 <th>Purpose Achieved?</th>
                 <th>Comments</th>
                 <th>Used Tutors</th>
-                <th>Courses</th>
+                <th>tutorCourses</th>
             </tr>
         </thead>
 
@@ -101,7 +101,7 @@ function filterName(x) {
                         <%=visit.usedTutor %>
                     </td>
                     <td>
-                        <%= visit.courses %>
+                        <%= visit.tutorCourses %>
                     </td>
                 </tr>
             </tbody>
